--- a/back/package.json
+++ b/back/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.6"
+    "mongoose": "^6.3.6",
+    "mongoose-unique-validator": "^3.1.0"
   }
 }
